# cassandra-fake

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/django_cassandra_fake/: apps.py  compat.py  connection.py  test.py  utils.py
src/django_cassandra_fake/base/: __init__.py  creation.py  introspection.py  management.py  operations.py
src/django_cassandra_fake/management/commands/: flush.py  makemigrations.py  migrate.py  sync_cassandra_fake.py  syncdb.py
src/django_cassandra_fake/sessions/: models.py
src/django_cassandra_fake/sessions/backends/: cached_db.py  db.py
tests/acceptance/: main.py  settings.py
tests/acceptance/app/: models.py
